--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -101,7 +101,7 @@ db-backup (scheduled):
     - ceres
   script: |
     FILENAME=spi_prod_$(date "+%Y-%m-%dT%H:%M:%S").dump
-    echo Backing database up to file ${FILENAME}
+    echo Backing up database to file ${FILENAME}
     echo Note: This requires the appropriate SSH tunnel to be active on the runner
     env PGPASSWORD=${DATABASE_PASSWORD} pg_dump --no-owner -Fc -h localhost -p 7432 -U spi_prod spi_prod > ${FILENAME}
     echo "Moving backup file to ${DB_BACKUP_DIR}"
@@ -115,7 +115,7 @@ db-backup (manual):
     - ceres
   script: |
     FILENAME=spi_prod_$(date "+%Y-%m-%dT%H:%M:%S").dump
-    echo Backing database up to file ${FILENAME}
+    echo Backing up database to file ${FILENAME}
     echo Note: This requires the appropriate SSH tunnel to be active on the runner
     env PGPASSWORD=${DATABASE_PASSWORD} pg_dump --no-owner -Fc -h localhost -p 7432 -U spi_prod spi_prod > ${FILENAME}
     echo "Moving backup file to ${DB_BACKUP_DIR}"
