--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,8 +2,9 @@ image: docker:stable
 
 
 variables:
-  IMAGE_SHA: $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA
-  IMAGE_TAG: $CI_REGISTRY_IMAGE:$CI_COMMIT_TAG
+  REGISTRY_IMAGE: registry.gitlab.com/finestructure/swiftpackageindex
+  IMAGE_SHA: $REGISTRY_IMAGE:$CI_COMMIT_SHA
+  IMAGE_TAG: $REGISTRY_IMAGE:$CI_COMMIT_TAG
   DOCKER_TLS_CERTDIR: "/certs"
 
 
@@ -21,12 +22,15 @@ stages:
   - smoke-test
 
 
+# We build only on the PROD project's pipeline, because we can read the image
+# for dev deployment. There is no need to build the images twice in parallel.
+# The PROD projects registry already has a build history, so we keep pushing to it.
 build-sha:  # full build when not a tag
   rules:
-    - if: '$CI_COMMIT_TAG == null'
+    - if: '$ENV == "prod" && $CI_COMMIT_TAG == null'
   stage: build
   tags:
-    - spi-builder
+    - ceres
   script:
     - echo 'let appVersion = "'${CI_COMMIT_TAG:-$CI_COMMIT_SHA}'"' > ./Sources/App/Core/AppVersion.swift
     - docker build -t $IMAGE_SHA .
@@ -35,10 +39,10 @@ build-sha:  # full build when not a tag
 
 build-tag:  # tag previously built docker image when a tag
   rules:
-    - if: '$CI_COMMIT_TAG != null'
+    - if: '$ENV == "prod" && $CI_COMMIT_TAG != null'
   stage: build
   tags:
-    - spi-builder
+    - ceres
   script:
     # re-tag image with tag name
     - docker pull $IMAGE_SHA
