--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -86,6 +86,7 @@ deploy prod:  # PROD: auto-deploy tags
 deploy dev:  # DEV: auto-deploy main
   rules:
     - if: '$ENV == "dev" && $CI_COMMIT_BRANCH == "main"'
+    - if: '$ENV == "dev" && $CI_COMMIT_TAG != null'
   tags:
     - spi-dev
   <<: *deploy-common
