--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -105,6 +105,7 @@ smoke-test:
   rules:
     - if: '$ENV == "prod" && $CI_COMMIT_TAG != null'
     - if: '$ENV == "prod" && $CI_PIPELINE_SOURCE == "schedule"'
+    - if: '$ENV == "dev"'
   stage: smoke-test
   tags:
     - ceres
