when: manual in rules: is blocking by default, hence the allow_failure: false to unblock
https://docs.gitlab.com/ce/ci/yaml/README.html#whenmanual

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -141,4 +141,5 @@ db-backup (manual):     # PROD: allow manual backup any time
   rules:
     - if: '$ENV == "prod"'
       when: manual
+  allow_failure: true
   <<: *backup-common
