Add example trigger request, update trigger url, token in compose file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ x-shared: &shared
     DATABASE_USERNAME: ${DATABASE_USERNAME}
     DATABASE_PASSWORD: ${DATABASE_PASSWORD}
     GITHUB_TOKEN: ${GITHUB_TOKEN}
+    GITLAB_PIPELINE_TOKEN: ${GITLAB_PIPELINE_TOKEN}
     LOG_LEVEL: ${LOG_LEVEL}
     ROLLBAR_TOKEN: ${ROLLBAR_TOKEN}
     SITE_URL: ${SITE_URL}
