--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,8 +10,25 @@ services:
   - docker:stable-dind
 
 
-before_script:
-  - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY
+before_script: |
+  retry() {
+    local -r -i max_attempts="$1"; shift
+    local -r cmd="$@"
+    local -i attempt_num=1
+    until $cmd
+    do
+        if ((attempt_num==max_attempts))
+        then
+            echo "Attempt $attempt_num failed and there are no more attempts left!"
+            return 1
+        else
+            echo "Attempt $attempt_num failed! Trying again in $attempt_num seconds..."
+            sleep $((attempt_num++))
+        fi
+    done
+  }
+
+  retry 3 "docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY"
 
     
 stages:
@@ -30,10 +47,27 @@ build:
   tags:
     - ceres
   script: |
+    retry() {
+      local -r -i max_attempts="$1"; shift
+      local -r cmd="$@"
+      local -i attempt_num=1
+      until $cmd
+      do
+          if ((attempt_num==max_attempts))
+          then
+              echo "Attempt $attempt_num failed and there are no more attempts left!"
+              return 1
+          else
+              echo "Attempt $attempt_num failed! Trying again in $attempt_num seconds..."
+              sleep $((attempt_num++))
+          fi
+      done
+    }
+
     VERSION=${CI_COMMIT_TAG:-$CI_COMMIT_SHA}
     echo 'let appVersion = "'${VERSION}'"' > ./Sources/App/Core/AppVersion.swift
     docker build -t $REGISTRY_IMAGE:$VERSION .
-    docker push $REGISTRY_IMAGE:$VERSION
+    retry 3 "docker push $REGISTRY_IMAGE:$VERSION"
 
 
 .deploy-common: &deploy-common
