--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,24 +11,13 @@ services:
 
 
 before_script: |
-  retry() {
-    local -r -i max_attempts="$1"; shift
-    local -r cmd="$@"
-    local -i attempt_num=1
-    until $cmd
-    do
-        if ((attempt_num==max_attempts))
-        then
-            echo "Attempt $attempt_num failed and there are no more attempts left!"
-            return 1
-        else
-            echo "Attempt $attempt_num failed! Trying again in $attempt_num seconds..."
-            sleep $((attempt_num++))
-        fi
-    done
-  }
-
-  retry 3 "docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY"
+  retries=3
+  unil docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY ; do
+    [[ $retries -eq 0 ]] && echo "docker login failed" && exit 1
+    sleep 5
+    echo Retrying ...
+    echo $((retries--)) retries left
+  done
 
     
 stages:
@@ -47,27 +36,17 @@ build:
   tags:
     - ceres
   script: |
-    retry() {
-      local -r -i max_attempts="$1"; shift
-      local -r cmd="$@"
-      local -i attempt_num=1
-      until $cmd
-      do
-          if ((attempt_num==max_attempts))
-          then
-              echo "Attempt $attempt_num failed and there are no more attempts left!"
-              return 1
-          else
-              echo "Attempt $attempt_num failed! Trying again in $attempt_num seconds..."
-              sleep $((attempt_num++))
-          fi
-      done
-    }
-
     VERSION=${CI_COMMIT_TAG:-$CI_COMMIT_SHA}
     echo 'let appVersion = "'${VERSION}'"' > ./Sources/App/Core/AppVersion.swift
     docker build -t $REGISTRY_IMAGE:$VERSION .
-    retry 3 "docker push $REGISTRY_IMAGE:$VERSION"
+    
+    retries=3
+    until docker push $REGISTRY_IMAGE:$VERSION ; do
+      [[ $retries -eq 0 ]] && echo "docker push failed" && exit 1
+      sleep 5
+      echo Retrying ...
+      echo $((retries--)) retries left
+    done
 
 
 .deploy-common: &deploy-common
