--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,8 @@ x-shared: &shared
     DATABASE_USERNAME: ${DATABASE_USERNAME}
     DATABASE_PASSWORD: ${DATABASE_PASSWORD}
     GITHUB_TOKEN: ${GITHUB_TOKEN}
+    GITLAB_API_TOKEN: ${GITLAB_API_TOKEN}
+    GITLAB_PIPELINE_LIMIT: ${GITLAB_PIPELINE_LIMIT}
     GITLAB_PIPELINE_TOKEN: ${GITLAB_PIPELINE_TOKEN}
     LOG_LEVEL: ${LOG_LEVEL}
     ROLLBAR_TOKEN: ${ROLLBAR_TOKEN}
