Route through BUILD_TRIGGER_LIMIT and BUILD_TRIGGER_SLEEP

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ x-shared: &shared
     # docker-compose reads and uses to populate variables
     ALLOW_BUILD_TRIGGERS: ${ALLOW_BUILD_TRIGGERS}
     BUILD_TRIGGER_DOWNSCALING: ${BUILD_TRIGGER_DOWNSCALING}
+    BUILD_TRIGGER_LIMIT: ${BUILD_TRIGGER_LIMIT}
+    BUILD_TRIGGER_SLEEP: ${BUILD_TRIGGER_SLEEP}
     BUILDER_TOKEN: ${BUILDER_TOKEN}
     CHECKOUTS_DIR: ${CHECKOUTS_DIR}
     DATABASE_HOST: ${DATABASE_HOST}
