Add backup scripts

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -128,13 +128,9 @@ smoke-test:
   tags:
     - ceres
   script: |
-    FILENAME=spi_prod_$(date "+%Y-%m-%dT%H:%M:%S").dump
-    echo Backing up database to file ${FILENAME}
-    echo Note: This requires the appropriate SSH tunnel to be active on the runner
-    env PGPASSWORD=${DATABASE_PASSWORD} pg_dump --no-owner -Fc -h localhost -p 7432 -U spi_prod spi_prod > ${FILENAME}
-    echo "Moving backup file to ${DB_BACKUP_DIR}"
-    mv ${FILENAME} ${DB_BACKUP_DIR}
-
+    TARFILE=spi_${ENV}_$(date +%Y-%m-%d).tgz
+    ./scripts/db_backup.sh $TARFILE
+    ./scripts/convert_to_db_dump.sh $TARFILE
 
 db-backup (scheduled):  # PROD: auto-backup on schedule
   rules:
