--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -129,6 +129,9 @@ smoke-test:
     - spi-prod
     - db-backup
   script: |
+    echo $PWD
+    whoami
+    which docker
     TARFILE=spi_${ENV}_$(date +%Y-%m-%d).tgz
     ./scripts/db_backup.sh $TARFILE
     ./scripts/convert_to_db_dump.sh $TARFILE
