--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,7 @@ x-shared: &shared
     GITLAB_API_TOKEN: ${GITLAB_API_TOKEN}
     GITLAB_PIPELINE_LIMIT: ${GITLAB_PIPELINE_LIMIT}
     GITLAB_PIPELINE_TOKEN: ${GITLAB_PIPELINE_TOKEN}
+    HIDE_STAGING_BANNER: ${HIDE_STAGING_BANNER}
     LOG_LEVEL: ${LOG_LEVEL}
     ROLLBAR_TOKEN: ${ROLLBAR_TOKEN}
     SITE_URL: ${SITE_URL}
