--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,7 @@ x-shared: &shared
     GITLAB_PIPELINE_TOKEN: ${GITLAB_PIPELINE_TOKEN}
     HIDE_STAGING_BANNER: ${HIDE_STAGING_BANNER}
     LOG_LEVEL: ${LOG_LEVEL}
+    METRICS_PUSHGATEWAY_URL: ${METRICS_PUSHGATEWAY_URL}
     ROLLBAR_TOKEN: ${ROLLBAR_TOKEN}
     SITE_URL: ${SITE_URL}
   volumes:
