--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,10 @@ x-shared: &shared
     DATABASE_NAME: ${DATABASE_NAME}
     DATABASE_USERNAME: ${DATABASE_USERNAME}
     DATABASE_PASSWORD: ${DATABASE_PASSWORD}
+    TWITTER_CONSUMER_KEY: ${TWITTER_CONSUMER_KEY}
+    TWITTER_CONSUMER_SECRET: ${TWITTER_CONSUMER_SECRET}
+    TWITTER_USER_KEY: ${TWITTER_USER_KEY}
+    TWITTER_USER_SECRET: ${TWITTER_USER_SECRET}
     GITHUB_TOKEN: ${GITHUB_TOKEN}
     GITLAB_API_TOKEN: ${GITLAB_API_TOKEN}
     GITLAB_PIPELINE_LIMIT: ${GITLAB_PIPELINE_LIMIT}
