Align variable names with names in Twitter console

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,10 +19,6 @@ x-shared: &shared
     DATABASE_NAME: ${DATABASE_NAME}
     DATABASE_USERNAME: ${DATABASE_USERNAME}
     DATABASE_PASSWORD: ${DATABASE_PASSWORD}
-    TWITTER_CONSUMER_KEY: ${TWITTER_CONSUMER_KEY}
-    TWITTER_CONSUMER_SECRET: ${TWITTER_CONSUMER_SECRET}
-    TWITTER_USER_KEY: ${TWITTER_USER_KEY}
-    TWITTER_USER_SECRET: ${TWITTER_USER_SECRET}
     GITHUB_TOKEN: ${GITHUB_TOKEN}
     GITLAB_API_TOKEN: ${GITLAB_API_TOKEN}
     GITLAB_PIPELINE_LIMIT: ${GITLAB_PIPELINE_LIMIT}
@@ -32,6 +28,10 @@ x-shared: &shared
     METRICS_PUSHGATEWAY_URL: ${METRICS_PUSHGATEWAY_URL}
     ROLLBAR_TOKEN: ${ROLLBAR_TOKEN}
     SITE_URL: ${SITE_URL}
+    TWITTER_API_KEY: ${TWITTER_API_KEY}
+    TWITTER_API_SECRET: ${TWITTER_API_SECRET}
+    TWITTER_ACCESS_TOKEN_KEY: ${TWITTER_ACCESS_TOKEN_KEY}
+    TWITTER_ACCESS_TOKEN_SECRET: ${TWITTER_ACCESS_TOKEN_SECRET}
   volumes:
     - checkouts:/checkouts
 
