--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ x-shared: &shared
     # set these variables via the environment or a `.env` file, which
     # docker-compose reads and uses to populate variables
     ALLOW_BUILD_TRIGGERS: ${ALLOW_BUILD_TRIGGERS}
+    ALLOW_TWITTER_POSTS: ${ALLOW_TWITTER_POSTS}
     BUILD_TRIGGER_DOWNSCALING: ${BUILD_TRIGGER_DOWNSCALING}
     BUILD_TRIGGER_LIMIT: ${BUILD_TRIGGER_LIMIT}
     BUILD_TRIGGER_SLEEP: ${BUILD_TRIGGER_SLEEP}
