--- a/infrastructure/loki/loki.yaml
+++ b/infrastructure/loki/loki.yaml
@@ -48,8 +48,8 @@ chunk_store_config:
   max_look_back_period: 0s
 
 table_manager:
-  retention_deletes_enabled: false
-  retention_period: 0s
+  retention_deletes_enabled: true
+  retention_period: 168h
 
 ruler:
   storage:
