Drop query log lines

--- a/infrastructure/promtail/promtail.yaml
+++ b/infrastructure/promtail/promtail.yaml
@@ -22,3 +22,5 @@ scrape_configs:
           expression: "\\[component:\\s*(?P<component>\\w+)\\]"
       - labels:
           component:
+      - drop:
+          expression: "query=\"{"
