--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,9 +28,7 @@ jobs:
       - name: Install unzip
         run: apt-get update && apt-get install -y unzip
       - name: Run tests
-        run:
-          - cp .env.testing.template .env.testing
-          - make test
+        run: cp .env.testing.template .env.testing && make test
         env:
           DATABASE_HOST: postgres
           DATABASE_PORT: '5432'
