Configure gmail account for sending email

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -177,7 +177,11 @@ services:
     image: bytemark/smtp
     restart: always
     environment:
-      MAILNAME: ${PLAUSIBLE_MAILNAME}
+      RELAY_HOST: ${MAIL_RELAY_HOST}
+      RELAY_PORT: ${MAIL_RELAY_PORT}
+      RELAY_USERNAME: ${MAIL_RELAY_USERNAME}
+      RELAY_PASSWORD: ${MAIL_RELAY_PASSWORD}
+      
   
   plausible_db:
     image: postgres:12.1-alpine
