Make PLAUSIBLE env variables available

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,8 @@ x-shared: &shared
     HIDE_STAGING_BANNER: ${HIDE_STAGING_BANNER}
     LOG_LEVEL: ${LOG_LEVEL}
     METRICS_PUSHGATEWAY_URL: ${METRICS_PUSHGATEWAY_URL}
+    PLAUSIBLE_BASE_URL: ${PLAUSIBLE_BASE_URL}
+    PLAUSIBLE_DOMAIN: ${PLAUSIBLE_DOMAIN}
     ROLLBAR_TOKEN: ${ROLLBAR_TOKEN}
     SITE_URL: ${SITE_URL}
     TWITTER_API_KEY: ${TWITTER_API_KEY}
