--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "repository": "git@github.com:SwiftPackageIndex/SwiftPackageIndex-Server.git",
   "scripts": {
-    "build": "parcel build Public/javascripts/main.js --public-url /javascripts --dist-dir Public/deploy/javascripts",
-    "serve": "parcel Public/javascripts/main.js --public-url /javascripts --dist-dir Public/deploy/javascripts"
+    "build": "parcel build Resources/Scripts/main.js --dist-dir Public",
+    "serve": "parcel serve Resources/Scripts/main.js --dist-dir Public"
   },
   "dependencies": {
     "parcel": "^2.0.0-beta.1",
