--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "dependencies": {
     "highlight.js": "^10.5.0",
     "lodash": "^4.17.20",
-    "parcel": "^1.12.4",
+    "parcel": "1.12.3",
     "sass": "^1.32.7"
   },
   "devDependencies": {
