--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "highlight.js": "^10.5.0",
     "lodash": "^4.17.20",
     "parcel": "1.12.3",
-    "sass": "^1.32.7"
+    "sass": "^1.32.7",
+    "turbolinks": "^5.2.0"
   },
   "devDependencies": {
     "eslint": "^7.20.0"
