--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,7 +31,7 @@ build:
     - ceres
   script: |
     VERSION=${CI_COMMIT_TAG:-$CI_COMMIT_SHA}
-    echo 'let appVersion = "'${VERSION}'"' > ./Sources/App/Core/AppVersion.swift
+    echo 'let appVersion: String? = "'${VERSION}'"' > ./Sources/App/Core/AppVersion.swift
 
     docker run --rm -v $PWD:/host -w /host --entrypoint sh node:15.8-alpine /usr/local/bin/yarn && /usr/local/bin/yarn build
     docker build -t $REGISTRY_IMAGE:$VERSION .
