--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
   "dependencies": {
     "highlight.js": "^10.5.0",
     "lodash": "^4.17.20",
-    "parcel": "1.12.3",
-    "sass": "^1.32.7",
     "turbolinks": "^5.2.0"
   },
   "devDependencies": {
-    "eslint": "^7.20.0"
+    "@parcel/transformer-sass": "2.0.0-beta.2",
+    "eslint": "^7.20.0",
+    "parcel": "^2.0.0-beta.2"
   }
 }
