--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "SwiftPackageIndex",
   "repository": "git@github.com:SwiftPackageIndex/SwiftPackageIndex-Server.git",
-  "js_target": "./Public/main.js",
-  "css_target": "./Public/main.css",
+  "js_target": "main.js",
+  "css_target": "main.css",
   "targets": {
     "js_target": {
-      "source": "./Resources/Scripts/main.js"
+      "source": "./Resources/Scripts/main.js",
+      "distDir": "./Public"
     },
     "css_target": {
-      "source": "./Resources/Styles/main.scss"
+      "source": "./Resources/Styles/main.scss",
+      "distDir": "./Public"
     }
   },
   "scripts": {
