--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -124,12 +124,16 @@ deploy dev (ad hoc):  # DEV: deploy any revision manually
   stage: deploy
   image: docker
   script: |
-    set -eu
+    set -eux
     VERSION=${CI_COMMIT_TAG:-$CI_COMMIT_SHA}
 
     # FIXME: use real versions
-    rollbar() { echo TEST: rollbar $@ }
-    telegram() { echo TEST: telegram $@ }
+    rollbar() {
+      echo TEST: rollbar $@
+    }
+    telegram() {
+      echo TEST: telegram $@
+    }
 
     echo Deploying VERSION $VERSION with SITE_URL: ${SITE_URL} ...
     telegram "🚧 deploying version $VERSION ..."
